<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package>
  <name>pro_arm_moveit</name>
  <version>1.0.0</version>
  <description>
     Package with all the configuration and launch files for using the SES-PRO-Arms with the MoveIt Motion Planning Framework
  </description>
  <author email="gbarreto@robotshop.com">Geraldine Barreto</author>
  <maintainer email="gbarreto@robotshop.com">Geraldine Barreto</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <run_depend>control_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>ros2_control</run_depend>
  <run_depend>ros2_controllers</run_depend>
  <run_depend>ign_ros2_control</run_depend>
  <!-- <run_depend>gz_ros2_control</run_depend> -->
  <run_depend>control_toolbox</run_depend>
  <run_depend>joint_state_broadcaster</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>gripper_controllers</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit</run_depend>
  <run_depend>moveit_resources</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ros_gz_bridge</run_depend>
  <run_depend>ros_gz_sim</run_depend>
  <run_depend>rviz2</run_depend>
  <run_depend>rviz_visual_tools</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
